# ebook_to_audio

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ebook_to_audio/: __init__.py  bilingual.py  cli.py  get_model.py  get_pdf_text.py  html_split.py  outpath_generator.py  preprocess.py  types.py  util.py
tests/: __init__.py  test_preprocess.py  test_util.py
tests/test_data/: 3chapters.epub
